# group1_HPCE_2020

./: LICENSE  README.md
Deliverable/Homework_1/Memory_leaks/memcheck/: Makefile.am  configure.ac
Deliverable/Homework_1/Valgrind Usage/Report/: Outputcase1.txt  Outputcase2-R.txt  Outputcase2.txt  Reportcase3.txt
Homework_1/Memory_leaks/: log.txt
Homework_1/Memory_leaks/memcheck/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  log.txt
Homework_1/Memory_leaks/memcheck/autom4te.cache/: output.0  requests  traces.1
Homework_1/Memory_leaks/memcheck/src/: Makefile  Makefile.in  config.status  configure  configure.ac  configure.scan  log.txt  (+2 more)
Homework_1/Valgrind Usage/Report/: Outputcase1-R.txt  Outputcase3-R.txt  Outputcase3.txt  Reportcase1.txt  Reportcase2.txt
Homework_2/: README  README.md
Homework_2/OpenMP/src/: make.def  makefile  pi  pi.c  pi_omp_private  pi_omp_private.c  pi_omp_teams  pi_omp_teams.c  pi_omp_teams_threads  pi_omp_threads  pi_omp_threads.c
project_1/Custom Meta-layer/: trapezoidal.c  trapezoidal.m
project_1/Custom Meta-layer/meta-tec/: README
project_2/Custom_Meta-layer/ImageOutputs/: YUV_intrinsics.yuv
project_2/Custom_Meta-layer/meta-hpec/: README  placeholder.txt
project_2/Prototyping/: CMakeLists.txt  image.rgb  imageyuv.yuv  main.cpp  rgb_yuv_opencv
project_2/Video/: video_link.txt
project_2/src/rgb2yuv-c/: compile_with.txt
project_2/src/rgb2yuv_intrinsics/: compile_with.txt  main.cpp
project_2/src/rgb2yuv_openmp/: compile_with.txt
project_2/src/rgb2yuv_pthreads/: compile_with.txt
(+164 files in other folders)
